@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-17T16:31:14Z",
+  "timestamp" : "2022-11-18T08:26:49Z",
   "count_outdated" : 629,
   "uniques_outdated" : 397,
-  "count" : 639,
-  "uniques" : 404,
+  "count" : 640,
+  "uniques" : 405,
   "clones" : [
     {
       "timestamp": "2022-11-13T00:00:00Z",
@@ -39,6 +39,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-11-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
