@@ -1,5 +1,5 @@
 {
-  "count": 10,
+  "count": 11,
   "uniques": 3,
   "clones": [
     {
@@ -26,6 +26,11 @@
       "timestamp": "2022-11-17T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-11-18T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
