@@ -1,3 +1,11 @@
+2022-11-18T08:26:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3495329579 # 624
+* notice: last 14d: unq all: 3 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 397 629 / 404 639
+* notice: next accum: outdated-unq outdated-all / unq all: 397 629 / 405 640
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-18]
+
 2022-11-17T16:31:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3490129612 # 622
 * notice: last 14d: unq all: 3 10
